# Peekaboo

./: index.html  package-lock.json  package.json  vite.config.ts
docs/: build plan.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: lib.rs  main.rs
src/components/: Attachments.tsx  ChatThread.tsx  ExchangeView.tsx  History.tsx  Input.tsx  Legend.tsx  LlamaProfileEditor.tsx  MemoryOverlay.tsx  Models.tsx  PeekSurface.tsx  Response.tsx  Settings.tsx  Setup.tsx
src/db/: database.ts
src/db/migrations/: 001_initial.sql  002_memories.sql
src/hooks/: useAttachments.ts  useLlamaServer.ts  useShortcuts.ts  useStream.ts
src/lib/: MarkdownWrapper.tsx  markdown.ts  markdown.tsx  messageUtils.ts  motion.ts
src/lib/plugins/: registry.ts  types.ts
src/providers/: anthropic.ts  gemini.ts  llama.ts  ollama.ts  openai.ts  plugin.ts  types.ts
src/store/: history.ts  peek.ts  plugins.ts  settings.ts
