[package]
name = "peekaboo-app"
version = "0.1.0"
description = "Peekaboo — instant AI overlay"
authors = ["you"]
edition = "2021"

[lib]
name = "peekaboo_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-single-instance = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
image = "0.25.10"
base64 = "0.22.1"
arboard = "3.6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
